Fixed scrollbar issue, further minor UI improvements

--- a/css/popup.css
+++ b/css/popup.css
@@ -6,7 +6,6 @@ body, html {
   overflow-y: hidden;
 }
 #hangout-bar {
-  background-color: rgba(0,0,0,0.05);
   border-bottom:1px solid #ccc;
   box-shadow:0px 0px 8px #999;
   margin: 0;
@@ -19,6 +18,8 @@ body, html {
   line-height: 30px;
   -webkit-user-select: none;
   text-shadow:1px 1px 1px rgba(255,255,255,0.5);
+  background:rgba(51,153,255,0.75);
+  background:rgba(0,0,0,0.1);
 }
 
 #hangout-bar-left {
@@ -38,7 +39,16 @@ body, html {
   display: inline-block;
   padding: 0 5px;
 }
-#hangout-bar-head { height:60px; }
+#hangout-bar-head { height:60px;
+background-image: -webkit-gradient(
+  linear,
+  left bottom,
+  left top,
+  color-stop(0.01, rgba(241,241,241,0)),
+  color-stop(0.99, rgba(255,255,255,0.65))
+);
+
+ }
 
 #hangout-filter { border-top:1px solid #ccc; height: 30px; padding:2px 10px; font-size:0.9em; clear: both; }
 #hangout-filter span { margin:0 8px 0 0; padding:0; float: left; color:#555;}
@@ -83,7 +93,6 @@ body, html {
   position: absolute;
   display:none;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .popup-page h2 {
